compiler-core/parsing/tests/snapshots/parser__expression_do_ado_prefix.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
---
(
    Module@0..104
      ModuleHeader@0..34
        MODULE@0..6 "module"
        ModuleName@6..28
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..28 "ExpressionDoAdoPrefix"
        Annotation@28..29
          TEXT@28..29 " "
        WHERE@29..34 "where"
      LAYOUT_START@34..34 ""
      ModuleStatements@34..103
        ValueEquation@34..63
          Annotation@34..36
            TEXT@34..36 "\n\n"
          LOWER@36..40 "main"
          Unconditional@40..63
            Annotation@40..41
              TEXT@40..41 " "
            EQUAL@41..42 "="
            WhereExpression@42..63
              ExpressionDo@42..63
                Annotation@42..43
                  TEXT@42..43 " "
                Qualifier@43..49
                  TEXT@43..49 "Hooks."
                DO@49..51 "do"
                DoStatements@51..63
                  LAYOUT_START@51..51 ""
                  DoStatementDiscard@51..63
                    ExpressionApplicationChain@51..63
                      ExpressionVariable@51..58
                        QualifiedName@51..58
                          Annotation@51..54
                            TEXT@51..54 "\n  "
                          LOWER@54..58 "pure"
                      ExpressionTermArgument@58..63
                        ExpressionVariable@58..63
                          QualifiedName@58..63
                            Annotation@58..59
                              TEXT@58..59 " "
                            LOWER@59..63 "unit"
                  LAYOUT_END@63..63 ""
        LAYOUT_SEPARATOR@63..63 ""
        ValueEquation@63..103
          Annotation@63..65
            TEXT@63..65 "\n\n"
          LOWER@65..69 "main"
          Unconditional@69..103
            Annotation@69..70
              TEXT@69..70 " "
            EQUAL@70..71 "="
            WhereExpression@71..103
              ExpressionAdo@71..103
                Annotation@71..72
                  TEXT@71..72 " "
                Qualifier@72..78
                  TEXT@72..78 "Hooks."
                ADO@78..81 "ado"
                DoStatements@81..93
                  LAYOUT_START@81..81 ""
                  DoStatementDiscard@81..93
                    ExpressionApplicationChain@81..93
                      ExpressionVariable@81..88
                        QualifiedName@81..88
                          Annotation@81..84
                            TEXT@81..84 "\n  "
                          LOWER@84..88 "pure"
                      ExpressionTermArgument@88..93
                        ExpressionVariable@88..93
                          QualifiedName@88..93
                            Annotation@88..89
                              TEXT@88..89 " "
                            LOWER@89..93 "unit"
                  LAYOUT_END@93..93 ""
                Annotation@93..96
                  TEXT@93..96 "\n  "
                IN@96..98 "in"
                ExpressionVariable@98..103
                  QualifiedName@98..103
                    Annotation@98..99
                      TEXT@98..99 " "
                    LOWER@99..103 "unit"
      LAYOUT_END@103..103 ""
      Annotation@103..104
        TEXT@103..104 "\n"
      END_OF_FILE@104..104 ""
    ,
    [],
)
