compiler-core/parsing/tests/snapshots/parser__expression_do_statements.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
---
(
    Module@0..112
      ModuleHeader@0..35
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..29
          UPPER@7..29 "ExpressionDoStatements"
        Annotation@29..30
          TEXT@29..30 " "
        WHERE@30..35 "where"
      LAYOUT_START@35..35 ""
      ModuleStatements@35..111
        ValueEquation@35..111
          Annotation@35..37
            TEXT@35..37 "\n\n"
          LOWER@37..41 "main"
          Unconditional@41..111
            Annotation@41..42
              TEXT@41..42 " "
            EQUAL@42..43 "="
            WhereExpression@43..111
              ExpressionDo@43..111
                Annotation@43..44
                  TEXT@43..44 " "
                DO@44..46 "do"
                DoStatements@46..111
                  LAYOUT_START@46..46 ""
                  DoStatementLet@46..62
                    Annotation@46..49
                      TEXT@46..49 "\n  "
                    LET@49..52 "let"
                    LetBindingStatements@52..62
                      LAYOUT_START@52..52 ""
                      LetBindingEquation@52..62
                        Annotation@52..53
                          TEXT@52..53 " "
                        LOWER@53..57 "life"
                        Unconditional@57..62
                          Annotation@57..58
                            TEXT@57..58 " "
                          EQUAL@58..59 "="
                          WhereExpression@59..62
                            ExpressionInteger@59..62
                              Annotation@59..60
                                TEXT@59..60 " "
                              INTEGER@60..62 "21"
                      LAYOUT_END@62..62 ""
                  LAYOUT_SEPARATOR@62..62 ""
                  DoStatementBind@62..86
                    BinderVariable@62..73
                      Annotation@62..65
                        TEXT@62..65 "\n  "
                      LOWER@65..73 "universe"
                    Annotation@73..74
                      TEXT@73..74 " "
                    LEFT_ARROW@74..76 "<-"
                    ExpressionApplicationChain@76..86
                      ExpressionVariable@76..81
                        Annotation@76..77
                          TEXT@76..77 " "
                        QualifiedName@77..81
                          LOWER@77..81 "pure"
                      ExpressionTermArgument@81..86
                        ExpressionVariable@81..86
                          Annotation@81..82
                            TEXT@81..82 " "
                          QualifiedName@82..86
                            LOWER@82..86 "life"
                  LAYOUT_SEPARATOR@86..86 ""
                  DoStatementDiscard@86..111
                    ExpressionOperatorChain@86..111
                      ExpressionVariable@86..93
                        Annotation@86..89
                          TEXT@86..89 "\n  "
                        QualifiedName@89..93
                          LOWER@89..93 "pure"
                      ExpressionOperatorPair@93..100
                        TermOperator@93..95
                          Annotation@93..94
                            TEXT@93..94 " "
                          QualifiedName@94..95
                            OPERATOR@94..95 "$"
                        ExpressionVariable@95..100
                          Annotation@95..96
                            TEXT@95..96 " "
                          QualifiedName@96..100
                            LOWER@96..100 "life"
                      ExpressionOperatorPair@100..111
                        TermOperator@100..102
                          Annotation@100..101
                            TEXT@100..101 " "
                          QualifiedName@101..102
                            OPERATOR@101..102 "+"
                        ExpressionVariable@102..111
                          Annotation@102..103
                            TEXT@102..103 " "
                          QualifiedName@103..111
                            LOWER@103..111 "universe"
                  LAYOUT_END@111..111 ""
      LAYOUT_END@111..111 ""
      Annotation@111..112
        TEXT@111..112 "\n"
      END_OF_FILE@112..112 ""
    ,
    [],
)
