compiler-core/parsing/tests/snapshots/parser__expression_hole.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
---
(
    Module@0..42
      ModuleHeader@0..27
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..21
          UPPER@7..21 "ExpressionHole"
        Annotation@21..22
          TEXT@21..22 " "
        WHERE@22..27 "where"
      LAYOUT_START@27..27 ""
      ModuleStatements@27..41
        ValueEquation@27..41
          Annotation@27..29
            TEXT@27..29 "\n\n"
          LOWER@29..33 "hole"
          Unconditional@33..41
            Annotation@33..34
              TEXT@33..34 " "
            EQUAL@34..35 "="
            WhereExpression@35..41
              ExpressionHole@35..41
                Annotation@35..36
                  TEXT@35..36 " "
                HOLE@36..41 "?hole"
      LAYOUT_END@41..41 ""
      Annotation@41..42
        TEXT@41..42 "\n"
      END_OF_FILE@42..42 ""
    ,
    [],
)
