compiler-core/parsing/tests/snapshots/parser__expression_lambda.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..69
      ModuleHeader@0..29
        MODULE@0..6 "module"
        ModuleName@6..23
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..23 "ExpressionLambda"
        Annotation@23..24
          TEXT@23..24 " "
        WHERE@24..29 "where"
      LAYOUT_START@29..29 ""
      ModuleImports@29..29
      ModuleStatements@29..68
        ValueEquation@29..47
          Annotation@29..31
            TEXT@29..31 "\n\n"
          LOWER@31..37 "lambda"
          FunctionBinders@37..37
          Unconditional@37..47
            Annotation@37..38
              TEXT@37..38 " "
            EQUAL@38..39 "="
            WhereExpression@39..47
              ExpressionLambda@39..47
                Annotation@39..40
                  TEXT@39..40 " "
                BACKSLASH@40..41 "\\"
                FunctionBinders@41..42
                  BinderVariable@41..42
                    LOWER@41..42 "x"
                Annotation@42..43
                  TEXT@42..43 " "
                RIGHT_ARROW@43..45 "->"
                ExpressionVariable@45..47
                  QualifiedName@45..47
                    Annotation@45..46
                      TEXT@45..46 " "
                    LOWER@46..47 "x"
        LAYOUT_SEPARATOR@47..47 ""
        ValueEquation@47..68
          Annotation@47..48
            TEXT@47..48 "\n"
          LOWER@48..54 "lambda"
          FunctionBinders@54..54
          Unconditional@54..68
            Annotation@54..55
              TEXT@54..55 " "
            EQUAL@55..56 "="
            WhereExpression@56..68
              ExpressionLambda@56..68
                Annotation@56..57
                  TEXT@56..57 " "
                BACKSLASH@57..58 "\\"
                FunctionBinders@58..61
                  BinderVariable@58..59
                    LOWER@58..59 "f"
                  BinderVariable@59..61
                    Annotation@59..60
                      TEXT@59..60 " "
                    LOWER@60..61 "a"
                Annotation@61..62
                  TEXT@61..62 " "
                RIGHT_ARROW@62..64 "->"
                ExpressionApplicationChain@64..68
                  ExpressionVariable@64..66
                    QualifiedName@64..66
                      Annotation@64..65
                        TEXT@64..65 " "
                      LOWER@65..66 "f"
                  ExpressionTermArgument@66..68
                    ExpressionVariable@66..68
                      QualifiedName@66..68
                        Annotation@66..67
                          TEXT@66..67 " "
                        LOWER@67..68 "a"
      LAYOUT_END@68..68 ""
      Annotation@68..69
        TEXT@68..69 "\n"
      END_OF_FILE@69..69 ""
    ,
    [],
)
