compiler-core/parsing/tests/snapshots/parser__expression_name.snap
---
source: compiler-core/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..64
      ModuleHeader@0..27
        MODULE@0..6 "module"
        ModuleName@6..21
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..21 "ExpressionName"
        Annotation@21..22
          TEXT@21..22 " "
        WHERE@22..27 "where"
      LAYOUT_START@27..27 ""
      ModuleImports@27..27
      ModuleStatements@27..63
        ValueEquation@27..40
          Annotation@27..29
            TEXT@27..29 "\n\n"
          LOWER@29..33 "name"
          FunctionBinders@33..33
          Unconditional@33..40
            Annotation@33..34
              TEXT@33..34 " "
            EQUAL@34..35 "="
            WhereExpression@35..40
              ExpressionVariable@35..40
                QualifiedName@35..40
                  Annotation@35..36
                    TEXT@35..36 " "
                  LOWER@36..40 "head"
        LAYOUT_SEPARATOR@40..40 ""
        ValueEquation@40..52
          Annotation@40..41
            TEXT@40..41 "\n"
          LOWER@41..45 "name"
          FunctionBinders@45..45
          Unconditional@45..52
            Annotation@45..46
              TEXT@45..46 " "
            EQUAL@46..47 "="
            WhereExpression@47..52
              ExpressionConstructor@47..52
                QualifiedName@47..52
                  Annotation@47..48
                    TEXT@47..48 " "
                  UPPER@48..52 "Cons"
        LAYOUT_SEPARATOR@52..52 ""
        ValueEquation@52..63
          Annotation@52..53
            TEXT@52..53 "\n"
          LOWER@53..57 "name"
          FunctionBinders@57..57
          Unconditional@57..63
            Annotation@57..58
              TEXT@57..58 " "
            EQUAL@58..59 "="
            WhereExpression@59..63
              ExpressionOperatorName@59..63
                QualifiedName@59..63
                  Annotation@59..60
                    TEXT@59..60 " "
                  OPERATOR_NAME@60..63 "(:)"
      LAYOUT_END@63..63 ""
      Annotation@63..64
        TEXT@63..64 "\n"
      END_OF_FILE@64..64 ""
    ,
    [],
)
